--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^3.9.0",
     "lodash": "4.17.4",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
+    "react-native-device-info": "^0.10.2",
     "react-native-gifted-chat": "^0.1.4"
   },
   "devDependencies": {
