--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.4",
     "react-native-device-info": "^0.10.2",
-    "react-native-gifted-chat": "^0.1.4"
+    "react-native-gifted-chat": "^0.1.4",
+    "rn-ios-user-agent": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
