--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.43.4",
     "react-native-device-info": "^0.10.2",
     "react-native-gifted-chat": "^0.1.4",
+    "react-native-vector-icons": "^4.1.1",
     "rn-ios-user-agent": "^1.0.0",
     "rn-viewpager": "^1.2.3"
   },
